# emt

./: README.org  emt.el
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
module/: Cargo.toml
module/src/: lib.rs
postmortem/: 2026-03-25-boundary-hooks.org  2026-04-29-release-workflow.org
test/: emt-test.el
